# clndir-rs

./: .gitignore  Cargo.toml  README.md  build.sh  config.conf  install.sh
src/: lib.rs  lib_files.rs  lib_text.rs  main.rs
